dist/1.0/bin/sample/retrieveUnpackaged/objects/Service_Menu__c.object
<CustomObject>
    <description>Services which Partner is allowed to sell in Extranet</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Service_Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Services Menu</relationshipLabel>
        <relationshipName>Service_Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>ID used during migration process to create relations and update data</description>
        <externalId>true</externalId>
        <inlineHelpText>ID used during migration process to create relations and update data</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Menu</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Service Menu Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Menu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Extranet_Bundles_Only</fullName>
        <active>true</active>
        <description>Only Bundles with Extranet field selected can be added to Service Menu</description>
        <errorConditionFormula>NOT(ISBLANK(Bundle__c))&amp;&amp;Bundle__r.Extranet__c=false</errorConditionFormula>
        <errorDisplayField>Bundle__c</errorDisplayField>
        <errorMessage>Only Bundles with Extranet field selected can be added to Service Menu</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSPL_manages_Service_Menu_PL_Partners</fullName>
        <active>true</active>
        <description>Only Polish Sales Support can modify Servcie Menu for Polish Partners</description>
        <errorConditionFormula>$User.UserRoleId &lt;&gt; &quot;00E20000000sPgg&quot;&amp;&amp; $User.UserRoleId &lt;&gt; &quot;00E200000012sdk&quot; &amp;&amp;  $User.ProfileId &lt;&gt; &quot;00e20000000qH2C&quot;  &amp;&amp; ISPICKVAL($User.GTS_Location__c,&quot;GTS Poland&quot;)  &amp;&amp; ISPICKVAL(Account__r.GTS_Location_del__c,&quot;GTS Poland&quot;) &amp;&amp; Account__r.RecordTypeId=&quot;01220000000LWcv&quot;</errorConditionFormula>
        <errorMessage>Only Sales Support PL can modify Service Menu for Partners PL</errorMessage>
    </validationRules>
</CustomObject>